// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders Display 1`] = `
<div
  class="led green-led"
>
  Open
</div>
`;

exports[`it renders Display 2`] = `
<div
  class="led green-led"
>
  Unlocked
</div>
`;
